Updated picture then added new pages

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <body>
     <center>
         <h1>Odin Recipes</h1>
-        <img width="250" src="beefandricebowl.jpg" alt="picture of bowl and rice">
+        <img src="ricebowl.jpg" alt="Picture of rice bowl">
         <p>Looking for an incredible recipe with beef and rice? These simple to make Beef and
             Pepper Rice Bowls recipe is so delicious, everyone in the house will be asking for
             seconds. Packed with flavor and healthy ingredients, this is the perfect
             weeknight dinner recipe.</p>
         <a href="beefpepperbowls.html">Beef and Pepper Rice Bowls</a>
+        <a href="odin-recipes/teriyakichickenbowl.html">Teriyaki Chicken Rice Bowl</a>
+        <a href="odin-recipes/steakricebowl.html">Steak and Rice Bowls with Vegetable Relish</a>
     </center>
 </body>
 </html>
