--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <center>
         <h1>Odin Recipes</h1>
         <img src="ricebowl.jpg" alt="Picture of rice bowl">
-        <p>Looking for an incredible recipe with beef and rice? These simple to make Beef and
-            Pepper Rice Bowls recipe is so delicious, everyone in the house will be asking for
+        <p>Looking for an incredible recipe with beef/chicken and rice? These simple to make Beef/chicken and
+            Rice Bowls recipes are so delicious, everyone in the house will be asking for
             seconds. Packed with flavor and healthy ingredients, this is the perfect
-            weeknight dinner recipe.</p>
-        <a href="beefpepperbowls.html">Beef and Pepper Rice Bowls</a>
-        <a href="odin-recipes/teriyakichickenbowl.html">Teriyaki Chicken Rice Bowl</a>
-        <a href="odin-recipes/steakricebowl.html">Steak and Rice Bowls with Vegetable Relish</a>
-    </center>
+            weeknight dinner recipes.</p>
+    <ul>
+        <li><a href="beefpepperbowls.html">Beef and Pepper Rice Bowls</a></li>
+        <li><a href="odin-recipes/teriyakichickenbowl.html">Teriyaki Chicken Rice Bowl</a></li>
+        <li><a href="odin-recipes/steakricebowl.html">Steak and Rice Bowls with Vegetable Relish</a></li>
+    </ul>
 </body>
 </html>
