--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             weeknight dinner recipes.</p>
     <ul>
         <li><a href="beefpepperbowls.html">Beef and Pepper Rice Bowls</a></li>
-        <li><a href="odin-recipes/teriyakichickenbowl.html">Teriyaki Chicken Rice Bowl</a></li>
-        <li><a href="odin-recipes/steakricebowl.html">Steak and Rice Bowls with Vegetable Relish</a></li>
+        <li><a href="teriyakichickenbowl.html">Teriyaki Chicken Rice Bowl</a></li>
+        <li><a href="steakricebowl.html">Steak and Rice Bowls with Vegetable Relish</a></li>
     </ul>
 </body>
 </html>
